# whatzapp

./: README.md  WhatZapp.py  pyproject.toml
whatzapp/: __about__.py  __init__.py  whatzapp.py  zapper.py
whatzapp/parsers/: parsers.py
