[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatzapp"
description = 'A Selenium-based modern Whatsapp web automation library for both beginners and advanced users for Python.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
         "whatsapp",
         "selenium",
         "automation",
         "bot",
         "messaging"
         ]
authors = [
  { name = "Maaz Ahmed", email = "mzahmed95@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["selenium"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/VoltaireNoir/whatzapp/wiki"
Issues = "https://github.com/VoltaireNoir/whatzapp/issues"
Source = "https://github.com/VoltaireNoir/whatzapp"

[tool.hatch.version]
path = "whatzapp/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=whatzapp --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "whatzapp/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
